[package]
name = "forest-fire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
handlebars = "4.3.5"
pulldown-cmark = "0.9.2"
walkdir = "2"
gray_matter = "0.2"
serde = "1.0.151"
