[package]
name = "combustion"
version = "0.1.0"
authors = ["Asa Paparo"]
edition = "2021"
rust-version = "1.66.0"
description = "A static site generator that renders templates per request"
readme = "README.md"
repository = "https://github.com/AngleSideAngle/combustion"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
handlebars = "4.3.5"
pulldown-cmark = "0.9.2"
walkdir = "2"
gray_matter = "0.2"
serde = "1.0.151"
toml = "0.5.10"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]