[package]
name = "combustion"
version = "0.2.0"
authors = ["Asa Paparo"]
edition = "2021"
rust-version = "1.71"
description = "A static site generator that renders templates per request"
readme = "README.md"
repository = "https://github.com/AngleSideAngle/combustion"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
handlebars = "4.3.5"
pulldown-cmark = "0.9.2"
walkdir = "2"
gray_matter = "0.2"
serde = "1.0.151"
toml = "0.5.10"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]
