[package]
name = "full_site"
version = "0.1.0"
workspace = "../"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combustion = { path = "../../" }
rocket = "0.5.0-rc.2"
handlebars = "4.3.5"
# serde = "1.0.151"
serde_json = "1.0"